name:                free-interpreter
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Alejandro Cabrera
maintainer:          cpp.cabrera@gmail.com
build-type:          Simple
cabal-version:       >=1.20

library
  build-depends:
    base,
    free
  ghc-options:         -Wall -O2
  exposed-modules:
    Data.Interpreter.Types,
    Data.Interpreter.Actions,
    Data.Interpreter
  default-language:    Haskell2010
  hs-source-dirs:      src

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  build-depends:
    base,
    free-interpreter,
    QuickCheck
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  hs-source-dirs:      tests

executable free-test
  main-is:             Main.hs
  build-depends:
    base,
    free,
    free-interpreter
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
