name:                free-interpreter
version:             0.2.0.0
license:             GPL-3
license-file:        LICENSE
author:              Allele Dev
maintainer:          allele.dev@gmail.com
copyright:           Allele Dev 2016
build-type:          Simple
cabal-version:       >=1.20

library
  build-depends:
    base,
    free
  exposed-modules:
    Control.Teletype
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-type-defaults
  hs-source-dirs:      src

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  build-depends:
    base,
    free-interpreter,
    QuickCheck
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  hs-source-dirs:      tests
